--- a/src/uLearn.Web/Views/Shared/_UlearnUpdatesInvitation.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UlearnUpdatesInvitation.cshtml
@@ -21,7 +21,7 @@
 						Подписывайтесь и настраивайте получение уведомлений обо всех новых сообщениях на электронную почту.
 					</p>
 					<p>
-						<a class="btn btn-large btn-primary" href="https://groups.google.com/forum/#!forum/ulearn-updates" target="_blank">Посмотреть группу</a>
+						<a class="btn btn-large btn-success" href="https://groups.google.com/forum/#!forum/ulearn-updates" target="_blank">Посмотреть группу</a>
 						<span class="text-muted">(откроется в новой вкладке)</span>
 					</p>
 					<p>
@@ -33,7 +33,7 @@
 					</p>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-success" data-dismiss="modal">Закрыть</button>
+					<button class="btn btn-primary" data-dismiss="modal">Закрыть</button>
 				</div>
 			</div>
 		</div>
