--- a/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
+++ b/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
@@ -18,17 +18,17 @@
                 </p>
                 <p>
                     Также вы можете получать уведомления себе в&nbsp;телеграм. Для этого напишите нашему боту
-                    <a href="https://t.me/ulearn_bot">@@ulearn_bot</a>.
+                    <a href="https://t.me/@Model.TelegramBotName">@@@Model.TelegramBotName</a>.
                 </p>
                 <p>
-                    <a class="btn btn-large btn-primary" href="@Url.Action("EnableNotificationTransport", "Notifications", new { transportId = Model.Transport.Id, enable = true })">Получать новости на&nbsp;почту</a>
+                    <a class="btn btn-large btn-success" href="@Url.Action("EnableNotificationTransport", "Notifications", new { transportId = Model.Transport.Id, enable = true })">Получать новости на&nbsp;почту</a>
                 </p>
                 <p>
                     Всегда ваши, <br />команда ulearn.me. <br />Пишите нам на <a href="mailto:support@ulearn.me">support@ulearn.me</a>.
                 </p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" data-dismiss="modal">Закрыть</button>
+                <button class="btn btn-primary" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
     </div>
