--- a/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
+++ b/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
@@ -14,7 +14,7 @@
                 </p>
                 <p>
                     Вы всегда сможете настроить, какие новости получать, или вовсе отказаться от уведомлений.
-                    Настройки находятся в&nbsp;меню курса на&nbsp;верхней панели.
+                    Настройки находятся в&nbsp;<a href="@Url.Action("Manage", "Account")">вашем профиле</a>.
                 </p>
                 <p>
                     Также вы можете получать уведомления себе в&nbsp;телеграм. Для этого напишите нашему боту
