--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -12,10 +12,11 @@
 	<meta name="title" content="@ViewBag.Title на ulearn.me"/>
 	<meta name="og:title" content="@ViewBag.Title на ulearn.me"/>
 	<meta name="og:image" content="~/Content/logo.png" />
-	<meta name="description" content="Интерактивные учебные онлайн курсы по программированию" />
+	<meta name="description" content="Интерактивные учебные онлайн-курсы по программированию" />
 	<link rel="image_src" href="~/Content/logo.png">
 	<link rel="shortcut icon" href="~/favicon.ico?v=4" />
 	@Styles.Render("~/css")
+	@Styles.Render("~/katex/katex.min.css")
 	@Scripts.Render("~/modernizr-js")
 </head>
 <body>
@@ -92,7 +93,7 @@
 	@RenderBody()
 
 	@Html.Partial("_UlearnUpdatesInvitation")
-    @Html.Action("SuggestMailTransport", "Notifications")
+	@Html.Action("SuggestMailTransport", "Notifications")
 
 	@Scripts.Render("~/main-js")
 	@RenderSection("scripts", required: false)
@@ -122,7 +123,7 @@
 	if (courses.Count == 0)
 	{
 		<li>
-            <a><b>Нет курсов</b></a>
+			<a><b>Нет курсов</b></a>
 			@if (User.IsSystemAdministrator())
 			{
 				@Html.ActionLink("Создать", "CourseList", "Admin")
