--- a/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
+++ b/src/ulearn.Web/Views/Notifications/SuggestMailTransport.cshtml
@@ -21,7 +21,14 @@
 					<a href="https://t.me/@Model.TelegramBotName">@@@Model.TelegramBotName</a>.
 				</p>
 				<p>
-					<a class="btn btn-large btn-success" href="@Url.Action("EnableNotificationTransport", "Notifications", new { transportId = Model.Transport.Id, enable = true })">Получать новости на&nbsp;почту</a>
+					<a class="btn btn-large btn-success" href="@Url.Action("EnableNotificationTransport", "Notifications", new
+					                                           {
+						                                           transportId = Model.Transport.Id,
+																   enable = true,
+																   timestamp = Model.LinkTimestamp,
+																   signature = Model.LinkSignature,
+						                                           next = Request.RawUrl
+					                                           })">Получать новости на&nbsp;почту</a>
 				</p>
 				<p>
 					Всегда ваши, <br />команда ulearn.me. <br />Пишите нам на <a href="mailto:support@ulearn.me">support@ulearn.me</a>.
