--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -1,30 +1,40 @@
 ﻿@{
 	ViewBag.Title = "Профиль";
 }
+
 <div class="container">
-	
 	<div class="row">
-		<div class="col-md-offset-4 col-md-4">
-			<h2>Профиль @User.Identity.Name</h2>
+		<div class="col-md-offset-3 col-md-6">
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-2">
+					<h2>Профиль @User.Identity.Name</h2>
+					
+					<hr class="without-top-margin"/>
 
-			<hr />
-
-			<p class="text-success">@ViewBag.StatusMessage</p>
+					@if (!string.IsNullOrEmpty(ViewBag.StatusMessage))
+					{
+						<div class="alert alert-success">@ViewBag.StatusMessage</div>
+					}
+				</div>
+			</div>
 
 			@Html.Action("ChangeDetailsPartial")
 			@if (ViewBag.HasLocalPassword)
 			{
 				@Html.Partial("_ChangePasswordPartial")
 			}
-
-			<section id="externalLogins">
-				@Html.Action("RemoveAccountList")
-				<div class="row">
-					<div class="col-md-6">
-						@Html.Partial("../Login/_ExternalLoginsListPartial", new ExternalLoginsListModel { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
+			
+			<div class="row">
+				<section id="externalLogins" class="col-sm-10 col-sm-offset-2">
+					@Html.Action("RemoveAccountList")
+					<div class="row">
+						<div class="col-md-6">
+							@Html.Partial("../Login/_ExternalLoginsListPartial", new ExternalLoginsListModel { Action = "LinkLogin", ReturnUrl = ViewBag.ReturnUrl })
+						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</div>
 	</div>
 </div>
+
