--- a/src/uLearn.Web/Views/Account/UserMenuPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/UserMenuPartial.cshtml
@@ -1,26 +1,48 @@
 ﻿@model UserMenuPartialViewModel
 
-@using Database.Extensions
-@using Database.Models
-@using Microsoft.AspNet.Identity
-
 @if (Model.IsAuthenticated)
 {
 	using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
 	{
 		@Html.AntiForgeryToken()
-		var profileMenuTitle = Model.UserVisibleName;
+		var profileMenuTitle = Model.User.VisibleName;
 		if (string.IsNullOrEmpty(profileMenuTitle))
 		{
 			profileMenuTitle = "Меню";
 		}
 
+		var hasProfileWarning = string.IsNullOrEmpty(Model.User.Email) || !Model.User.EmailConfirmed;
+
 		<ul class="nav navbar-nav navbar-right">
 			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@profileMenuTitle <span class="caret"></span></a>
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+					@if (hasProfileWarning)
+					{
+						<span class="fa fa-exclamation-triangle user-menu__error__icon"></span>
+					}
+					@profileMenuTitle <span class="caret"></span>
+				</a>
 				<ul class="dropdown-menu">
-				    <li>@Html.ActionLink("Профиль", "Manage", "Account", null, new { title = "Редактировать профиль" })</li>
-                    <li>@Html.ActionLink("Сертификаты", "Index", "Certificates", new { userId = User.Identity.GetUserId() }, new { })</li>
+					<li>
+						<a href="@Url.Action("Manage", "Account")" title="Редактировать профиль">
+							Профиль
+						</a>
+					</li>
+					@if (string.IsNullOrEmpty(Model.User.Email))
+					{
+						<li class="user-menu__error">
+							Не&nbsp;указана эл.&nbsp;почта
+							<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Укажите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span>
+						</li>
+					}
+					@if (! string.IsNullOrEmpty(Model.User.Email) && ! Model.User.EmailConfirmed)
+					{
+						<li class="user-menu__error">
+							Эл.&nbsp;почта не&nbsp;подтверждена
+							<span class="fa fa-question-circle with-long-tooltip" data-toggle="tooltip" data-placement="bottom" title="Подтвердите в профиле электронную почту, чтобы получать уведомления и восстановить доступ в случае утери пароля"></span>
+						</li>
+					}
+                    <li>@Html.ActionLink("Сертификаты", "Index", "Certificates", new { userId = Model.User.Id }, new { })</li>
 					<li><a href="#" onclick="document.getElementById('logoutForm').submit(); return false;">Выход</a></li>
 				</ul>
 			</li>
