--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,27 +1,39 @@
 ﻿@model ManageUserViewModel
 
-<hr/>
-
 <section class="login-and-registration-form">
-	@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { role = "form" }))
+	@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 	{
 		@Html.AntiForgeryToken()
-		<h2>Изменить пароль</h2>
+		<div class="row">
+			<h2 class="col-sm-10 col-sm-offset-2 space-after">Изменить пароль</h2>
+		</div>
 		@Html.ValidationSummary(true)
+
 		<div class="form-group">
-			@Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", @placeholder = "Старый пароль" })
+			<div class="col-sm-2 control-label">Старый</div>
+			<div class="col-sm-10">
+				@Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", placeholder = "Введите старый пароль" })
+			</div>
 		</div>
 		<div class="form-group">
-			@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "Новый пароль" })
-			@Html.ValidationMessageFor(m => m.NewPassword)
+			<div class="col-sm-2 control-label">Новый</div>
+			<div class="col-sm-10">
+				@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", placeholder = "Введите новый пароль" })
+				@Html.ValidationMessageFor(m => m.NewPassword)
+			</div>
 		</div>
 		<div class="form-group">
-			@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
-			@Html.ValidationMessageFor(m => m.ConfirmPassword)
+			<div class="col-sm-2 control-label">Ещё раз</div>
+			<div class="col-sm-10">
+				@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Повторите новый пароль" })
+				@Html.ValidationMessageFor(m => m.ConfirmPassword)
+			</div>
 		</div>
 
 		<div class="form-group">
-			<input type="submit" value="Сменить пароль" class="ph-btn ph-btn-green btn-block" />
+			<div class="col-sm-10 col-sm-offset-2">
+				<input type="submit" value="Сменить пароль" class="ph-btn ph-btn-green btn-block"/>
+			</div>
 		</div>
 	}
 </section>
