--- a/src/uLearn.Web/Views/Admin/Groups.cshtml
+++ b/src/uLearn.Web/Views/Admin/Groups.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Database.Extensions
 @using Database.Models
 @using Microsoft.AspNet.Identity
+@using uLearn
 @using uLearn.Extensions
 @using uLearn.Web.Extensions
 
