--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -1,24 +1,51 @@
 ﻿@model UserViewModel
 
 <section class="login-and-registration-form">
-	@using (Html.BeginForm("ChangeDetailsPartial", "Account", FormMethod.Post, new { role = "form" }))
+	@if (!string.IsNullOrEmpty(Model.User.Email) && !Model.User.EmailConfirmed)
+	{
+		<div class="row">
+			<div class="col-sm-10 col-sm-offset-2">
+				@if (Model.User.LastConfirmationEmailTime != null)
+				{
+					<div class="alert alert-success">
+						Мы отправили письмо на&nbsp;@Model.User.Email. 
+						Если письмо не&nbsp;пришло, мы можем @Html.ActionLink("отправить его ещё раз", "SendConfirmationEmail", "Account").
+					</div>
+				}
+				else
+				{
+					<div class="alert alert-danger">Адрес электронной почты @Model.User.Email не&nbsp;подтверждён. @Html.ActionLink("Отправить письмо для подтверждения", "SendConfirmationEmail", "Account")?</div>
+				}
+			</div>
+		</div>
+	}
+
+	@using (Html.BeginForm("ChangeDetailsPartial", "Account", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 	{
 		@Html.AntiForgeryToken()
 
 		@Html.ValidationSummary(true)
 		@Html.HiddenFor(m => m.UserId)
 		<div class="form-group">
-			@Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Логин" })
-			@Html.ValidationMessageFor(m => m.Name)
+			<div class="col-sm-2 control-label">Логин</div>
+			<div class="col-sm-10">
+				@Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Введите логин" })
+				@Html.ValidationMessageFor(m => m.Name)
+			</div>
 		</div>
 		<div class="form-group">
-			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "Имя" })
-			@Html.ValidationMessageFor(m => m.FirstName)
-
+			<div class="col-sm-2 control-label">Имя</div>
+			<div class="col-sm-10">
+				@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "Введите имя" })
+				@Html.ValidationMessageFor(m => m.FirstName)
+			</div>
 		</div>
 		<div class="form-group">
-			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Фамилия" })
-			@Html.ValidationMessageFor(m => m.LastName)
+			<div class="col-sm-2 control-label">Фамилия</div>
+			<div class="col-sm-10">
+				@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Введите фамилию" })
+				@Html.ValidationMessageFor(m => m.LastName)
+			</div>
 		</div>
 
 		if (!Model.HasPassword)
@@ -28,27 +55,39 @@
 			</p>
 
 			<div class="form-group">
-				@Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Пароль" })
-				@Html.ValidationMessageFor(m => m.Password)
+				<div class="col-sm-2 control-label">Пароль</div>
+				<div class="col-sm-10">
+					@Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Пароль" })
+					@Html.ValidationMessageFor(m => m.Password)
+				</div>
 			</div>
 			<div class="form-group">
-				@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Ещё раз" })
-				@Html.ValidationMessageFor(m => m.ConfirmPassword)
+				<div class="col-sm-2 control-label">Ещё раз</div>
+				<div class="col-sm-10">
+					@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Повторите пароль" })
+					@Html.ValidationMessageFor(m => m.ConfirmPassword)
+				</div>
 			</div>
 		}
-
-		if (!Model.User.EmailConfirmed)
-		{
-			<div class="form-group">
-				@Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Эл. почта" })
+		
+		<div class="form-group profile__email-input @(Model.User.EmailConfirmed ? "no-display" : "")">
+			<div class="col-sm-2 control-label">Эл.&nbsp;почта</div>
+			<div class="col-sm-10">
+				@Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Введите адрес почты" })
 				@Html.ValidationMessageFor(m => m.Email)
 			</div>
-		}
-
-		@Html.Action("Settings", "Notifications")
+		</div>
 
 		<div class="form-group">
-			<input type="submit" value="Сохранить изменения" class="ph-btn ph-btn-blue btn-block"/>
+			<div class="col-sm-10 col-sm-offset-2">
+				@Html.Action("Settings", "Notifications")
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				<input type="submit" value="Сохранить изменения" class="ph-btn ph-btn-blue btn-block"/>
+			</div>
 		</div>
 	}
 </section>
