--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ManageUserViewModel
 
-<section class="login-and-registration-form">
+<section class="login-and-registration-form profile-form">
 	@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { role = "form", @class = "form-horizontal" }))
 	{
 		@Html.AntiForgeryToken()
