--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@model UserViewModel
+﻿@using uLearn
+@model UserViewModel
 
-<section class="login-and-registration-form">
+<section class="login-and-registration-form profile-form">
 	@if (!string.IsNullOrEmpty(Model.User.Email) && !Model.User.EmailConfirmed)
 	{
 		<div class="row">
@@ -25,7 +26,6 @@
 		@Html.AntiForgeryToken()
 
 		@Html.ValidationSummary(true)
-		@Html.HiddenFor(m => m.UserId)
 		<div class="form-group">
 			<div class="col-sm-2 control-label">Логин</div>
 			<div class="col-sm-10">
@@ -45,6 +45,31 @@
 			<div class="col-sm-10">
 				@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Введите фамилию" })
 				@Html.ValidationMessageFor(m => m.LastName)
+			</div>
+		</div>
+		<div class="form-group radio-form-group">
+			<div class="col-sm-2 control-label for-non-text-fields">Пол</div>
+			<div class="col-sm-10">
+				<div class="radio radio-default ib">
+					@Html.RadioButtonFor(m => m.Gender, Gender.Male, new { id = "profile__gender__male" }) <label for="profile__gender__male">Мужской</label>
+				</div>
+				<div class="radio radio-default ib">
+					@Html.RadioButtonFor(m => m.Gender, Gender.Female, new { id = "profile__gender__female" }) <label for="profile__gender__female">Женский</label>
+				</div>
+				@Html.ValidationMessageFor(m => m.Gender)
+			</div>
+		</div>
+		<div class="form-group profile__email-input @(Model.User.EmailConfirmed ? "no-display" : "")">
+			<div class="col-sm-2 control-label">Эл.&nbsp;почта</div>
+			<div class="col-sm-10">
+				@Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Введите адрес почты" })
+				@Html.ValidationMessageFor(m => m.Email)
+			</div>
+		</div>
+
+		<div class="form-group">
+			<div class="col-sm-10 col-sm-offset-2">
+				@Html.Action("Settings", "Notifications")
 			</div>
 		</div>
 
@@ -69,20 +94,6 @@
 				</div>
 			</div>
 		}
-		
-		<div class="form-group profile__email-input @(Model.User.EmailConfirmed ? "no-display" : "")">
-			<div class="col-sm-2 control-label">Эл.&nbsp;почта</div>
-			<div class="col-sm-10">
-				@Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Введите адрес почты" })
-				@Html.ValidationMessageFor(m => m.Email)
-			</div>
-		</div>
-
-		<div class="form-group">
-			<div class="col-sm-10 col-sm-offset-2">
-				@Html.Action("Settings", "Notifications")
-			</div>
-		</div>
 
 		<div class="form-group">
 			<div class="col-sm-10 col-sm-offset-2">
