--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -94,3 +94,17 @@ else
 		</div>
 	}
 }
+
+@if (Model.Slide is ExerciseSlide)
+{
+	<div class="comments__rules alert alert-warning">
+		Простые правила хороших комментариев
+		<ul>
+			<li>Используйте подсказки перед тем, как задать вопрос в комментариях.</li>
+			<li>Воздержитесь от вопросов «Почему у меня не работает?». Отлаживайте, экспериментируйте, думайте!</li>
+			<li>Пожалуйста, не публикуйте свои решения.</li>
+			<li>Мы будем благодарны вам за доброжелательный тон в комментариях.
+			</li>
+		</ul>
+	</div>
+}
